# python-connector

./: README.MD  setup.cfg
foreign_handlers/: __init__.py  connector.py  constants.py  types.py
foreign_handlers/converters/: __init__.py  constants.py
python/foreign_handlers/: constants.py  type_creator.py
python/foreign_handlers/converters/: __init__.py  constants.py  list.py
python/foreign_handlers/utilities/: __init__.py
