[metadata]
name = foreign-handlers
version = 0.1
author = awekrx
author_email = d.ipatov.v@gmail.com
description = Plugin for the typescript library "Foreign processors"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ForeignHandlers/python-connector
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = foreign_handlers